src/features/amUI/userRightsPage/SingleRightsSection/SingleRightsSection.module.css
.singleRightsSectionContainer {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  padding: 1rem 0 0.5rem 0;
}

.headerContainer {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

.singleRightsList {
  list-style-type: none;
  padding: 0.5rem 0;
  margin: 0;
}

.tools {
  display: flex;
  justify-content: space-between;
}

.pagination {
  display: flex;
  justify-content: center;
  align-items: center;
}

.actions {
  padding-right: 0.5rem;
  display: flex;
  gap: 1rem;
}

.wipMessage {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

